# RAG

./: README.md
RAG/: pyproject.toml  requirements.txt
RAG/VectorEmbeddingsAndDatabases/: embeddings.ipynb
RAG/vectorStores/: chromadb.ipynb
RAG/vectorStores/data/: doc_1.txt  doc_2.txt  doc_3.txt
